infra/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: engenox
  labels:
    name: engenox
    environment: dev
